--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "def rss(m, X=df.budget, y=df.domgross):\n",
     "    #Your code here\n",
-    "    "
+    "    y_pred = m*"
    ]
   },
   {
