--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
    "source": [
     "def rss(m, X=df.budget, y=df.domgross):\n",
     "    #Your code here\n",
-    "    y_pred = m*"
+    "    y_pred = m*X\n",
+    "    return y"
    ]
   },
   {
