Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rss(m, X=df.budget, y=df.domgross):\n",
     "    #Your code here\n",
     "    y_pred = m*X\n",
-    "    return y"
+    "    return sum(y-y_pred)"
    ]
   },
   {
