--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "print(rss(1.575))"
    ]
   },
   {
