Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "print(rss(1.575))"
+    "print(rss(1.575, ))"
    ]
   },
   {
