Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,12 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-632484709.625\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "print(rss(1.575, ))"
+    "print(rss(1.575))"
    ]
   },
   {
@@ -215,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your response here"
+    "#Your response here\n"
    ]
   },
   {
