Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
     "def rss(m, X=df.budget, y=df.domgross):\n",
     "    #Your code here\n",
     "    y_pred = m*X\n",
-    "    return sum(y-y_pred)"
+    "    return sum((y-y_pred)**2)"
    ]
   },
   {
