Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-632484709.625\n"
+      "2.7614512142376128e+17\n"
      ]
     }
    ],
@@ -223,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your response here\n"
+    "#Your response here\n",
+    "print(rss(1.575))"
    ]
   },
   {
